--- a/buttons.ini
+++ b/buttons.ini
@@ -1,3 +1,7 @@
-[MAINMENU]
-rt = [[76, 72], [86, 79], [59, 170]]
+[positions]
+center = [[73, 73], [85, 76], [12, 170]]
+offset = [[76, 72], [86, 79], [11, 173]]
+sidebyside = [[81, 74], [86, 73], [5, 171]]
+low = [[62, 77], [99, 87], [11, 154]]
+high = [[72, 54], [73, 52], [21, 196]]
 
